--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "recharts",
-  "version": "1.1.1",
+  "name": "recharts-renderkey",
+  "version": "1.0.0",
   "description": "React charts",
   "main": "lib/index",
   "module": "es6/index",
